crates/sotf-plugins/tests/snapshots/render_plan_snapshots__crossfeed__crossfeed__iphone_landscape.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "crossfeed",
  "width": 844.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "sm",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "main",
    "output"
  ],
  "columns_collapsed": [],
  "config_controls": [
    {
      "param_index": 1,
      "param_name": "Preset",
      "control_type": "selector",
      "unit": "",
      "range": [
        0.0,
        4.0
      ],
      "read_only": false
    },
    {
      "param_index": 2,
      "param_name": "Enabled",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    }
  ],
  "main_groups": [
    {
      "title": "",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Mode",
          "control_type": "button_set",
          "unit": "",
          "range": [
            0.0,
            3.0
          ],
          "read_only": false
        }
      ]
    },
    {
      "title": "BAUER",
      "controls": [
        {
          "param_index": 4,
          "param_name": "Bauer Cutoff",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            400.0,
            1000.0
          ],
          "read_only": false
        },
        {
          "param_index": 5,
          "param_name": "Bauer Feed",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            0.0,
            15.0
          ],
          "read_only": false
        }
      ]
    },
    {
      "title": "MEIER",
      "controls": [
        {
          "param_index": 6,
          "param_name": "Meier Level",
          "control_type": "knob",
          "unit": "%",
          "range": [
            0.0,
            100.0
          ],
          "read_only": false
        }
      ]
    },
    {
      "title": "MULTIBAND",
      "controls": [
        {
          "param_index": 7,
          "param_name": "MB Low Freq",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            50.0,
            500.0
          ],
          "read_only": false
        },
        {
          "param_index": 8,
          "param_name": "MB Mid/High Freq",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            2000.0,
            15000.0
          ],
          "read_only": false
        },
        {
          "param_index": 9,
          "param_name": "MB Low Feed",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -20.0,
            0.0
          ],
          "read_only": false
        },
        {
          "param_index": 10,
          "param_name": "MB Mid Feed",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            0.0,
            15.0
          ],
          "read_only": false
        },
        {
          "param_index": 11,
          "param_name": "MB High Feed",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            0.0,
            15.0
          ],
          "read_only": false
        }
      ]
    },
    {
      "title": "ITD",
      "controls": [
        {
          "param_index": 12,
          "param_name": "ITD Delay",
          "control_type": "knob",
          "unit": "ms",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "output_controls": [
    {
      "param_index": 14,
      "param_name": "Target LUFS",
      "control_type": "knob",
      "unit": "LUFS",
      "range": [
        -40.0,
        -12.0
      ],
      "read_only": false
    },
    {
      "param_index": 13,
      "param_name": "Auto Gain",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    },
    {
      "param_index": 15,
      "param_name": "Max Gain",
      "control_type": "knob",
      "unit": "dB",
      "range": [
        0.0,
        24.0
      ],
      "read_only": false
    },
    {
      "param_index": 3,
      "param_name": "Mix",
      "control_type": "knob",
      "unit": "%",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    },
    {
      "param_index": 16,
      "param_name": "Smoothing",
      "control_type": "knob",
      "unit": "ms",
      "range": [
        10.0,
        5000.0
      ],
      "read_only": false
    }
  ],
  "tabs": [],
  "viz_slots": [],
  "dynamic_sections": []
}
